--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
-    "vite": "^6.0.3"
+    "terser": "^5.37.0",
+    "vite": "^6.0.3",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
